Fixing letter-spacing in button

--- a/index.css
+++ b/index.css
@@ -65,10 +65,11 @@ article{
 .contentBtn{
     position: relative;
     display: block;
-    font-weight: 600;
+    font-weight: 500;
     font-family: 'Roboto', serif;
     line-height: 30px;
     color: white;
+    letter-spacing: 0.75px;
     font-size: 12px;
     z-index: 1;
 }
